--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "oboyda/wp-theme-bootstrap",
-    "version": "1.2.dev",
+    "name": "wp-theme-bootstrap",
+    "version": "1.0.0",
     "private": true,
     "main": "build/index.js",
     "module": "src/index.js",
