--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,10 @@
 {
     "name": "oboyda/wp-theme-bootstrap",
     "description": "Bootstrap WordPress theme",
-    "version": "1.0.0",
+    "version": "1.4.0",
     "autoload": {
         "psr-4": {
-            "WPTB\\": "src/classes"
+            "WPTBOOT\\": "src/classes"
         }
     }
 }
