--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,16 @@
 {
     "name": "oboyda/wp-theme-bootstrap",
     "description": "Bootstrap WordPress theme",
-    "version": "1.6.0",
+    "version": "1.7.0",
     "autoload": {
         "psr-4": {
             "WPTBOOT\\": "src/classes"
         }
+    },
+    "repositories" : [
+        { "type": "vcs", "url": "https://github.com/oboyda/wp-seed" }
+    ],
+    "require": {
+        "oboyda/wp-seed": "dev-main"
     }
 }
