--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "version": "1.7.0",
     "autoload": {
         "psr-4": {
-            "TART\\": "src/php/classes"
+            "WPTB\\": "src/php/classes"
         }
     },
     "repositories" : [
