--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "main": "build/index.js",
     "module": "src/index.js",
     "scripts": {
-        "start": "wp-scripts start",
+        "swptb": "wp-scripts swptb",
         "build": "wp-scripts build"
     },
     "devDependencies": {
